# BSc-Thesis-ARIAC-2020

./: .clang-format  .gitignore  CMakeLists.txt  README.md  package.xml
config/: sample.yaml  sample_config.yaml
include/: gantry_control_node.h  utilities.h
launch/: gantry.launch  gantry_controller.launch  sample_environment.launch
models/apple_green_ariac/: model.config  model.dae  model.sdf
models/apple_red_ariac/: model.sdf
script/: gear.py  my_gear.py
src/: example.cpp  example_control_node.cpp  gantry_control_node.cpp  utilities.cpp
srv/: GetNextModel.srv  GetPlacePosition.srv
