<?xml version="1.0"?>
<package format="2">
  <name>controller</name>
  <version>0.1.0</version>
  <description>A package for controlling the environment.</description>
  <maintainer email="szalayr@edu.bme.hu">Szalay Réka</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>nist_gear</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>trajectory_msgs</depend>

</package>
